Fix problems but also create problems